--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- SITE TITLE -->
-    <title>IMOZAR - Personal Portfolio Template</title>
+    <title>Thomas Bacas Consulting</title>
     <meta name="description" content="Bamboo - Personal Parallax Portfolio Template">
 
     <!-- Bootstrap CSS -->
@@ -29,12 +29,12 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
 
 	<!-- Favicon -->
-	<link rel="icon" href="img/favicon.ico">
+<!--	<link rel="icon" href="img/favicon.ico">-->
 
 	<!-- Touch Icons - iOS and Android 2.1+ -->
- 	<link rel="apple-touch-icon" href="img/apple-favicon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-ipad.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-iphone4.png" />
+<!-- 	<link rel="apple-touch-icon" href="img/apple-favicon.png">-->
+<!--	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-ipad.png" />-->
+<!--	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-iphone4.png" />-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -525,7 +525,7 @@ The Postal Service processes nearly 200 million pieces of mail a day.  Validatin
 
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="owl-carousel testimonial-slider">
+<!--                    <div class="owl-carousel testimonial-slider">-->
 
                         <div class="one-testimonial">
                             <div class="testimonial-content">
@@ -541,6 +541,7 @@ The Postal Service processes nearly 200 million pieces of mail a day.  Validatin
                                 </div>
                             </div>
                         </div>
+<!--
                         <div class="one-testimonial">
                             <div class="testimonial-content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh facilisis bibendum dolor feugiat.</p>
@@ -555,6 +556,7 @@ The Postal Service processes nearly 200 million pieces of mail a day.  Validatin
                                 </div>
                             </div>
                         </div>
+-->
 <!--
                         <div class="one-testimonial">
                             <div class="testimonial-content">
