--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 Using data driven insights, I help business leaders answer difficult questions by translating big data into actionable information. I have done work for clients across many industries like finance, politics, manufacturing and government. I deliver value to my clients by driving innovation and pushing creative solutions to problems. 
 </p>
 <p>
-I originally studied Finance and Accounting and then moved into the Data Science field.  I have been able to combine both experiences into a full stack of sophisticated data and financial analytics.  Since then, I have been working as a Management Consultant for Accenture where I provide clients with business insights to help them achieve their financial and internal objectives.</p>
+I originally studied Finance and Accounting and then moved into the Data Science field.  I have been able to combine both experiences into a full stack of sophisticated data and financial analytics.  Since then, I have been working as a Management Consultant where I provide clients with business insights to help them achieve their financial and internal objectives.</p>
 <p>
 Working with talented individuals and accomplishing their goals is something I’m truly passionate about.  Being able to creatively problem solve and face new challenges every day is what makes Data Science so rewarding.
 </p>
